add folder list

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -19,6 +19,7 @@
       "@auth/feature-login": ["libs/core/auth/feature-login/src/index.ts"],
       "@auth/feature-register": ["libs/core/auth/feature-register/src/index.ts"],
       "@dadata": ["libs/core/dadata/src/index.ts"],
+      "@material/data-access": ["libs/users/materials/data-access/src/index.ts"],
       "@users/core/dadata": ["libs/core/dadata/src/index.ts"],
       "@users/core/data-access": ["libs/core/data-access/src/index.ts"],
       "@users/core/github-api": ["libs/core/github-api/src/index.ts"],
@@ -29,6 +30,8 @@
       "@users/core/ui/layout": ["libs/users/core/ui/layout/src/public-api.ts"],
       "@users/core/utils": ["libs/core/utils/src/index.ts"],
       "@users/data-access": ["libs/data-access/src/index.ts"],
+      "@users/feature-folder-detail": ["libs/users/materials/feature-folder-detail/src/index.ts"],
+      "@users/feature-folders-list": ["libs/users/materials/feature-folders-list/src/index.ts"],
       "@users/feature-users-create": ["libs/users/users/feature-users-create/src/index.ts"],
       "@users/feature-users-detail": ["libs/users/users/feature-users-detail/src/index.ts"],
       "@users/feature-users-list": ["libs/users/users/feature-users-list/src/index.ts"],
