--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -31,6 +31,7 @@
       "@users/core/utils": ["libs/core/utils/src/index.ts"],
       "@users/data-access": ["libs/data-access/src/index.ts"],
       "@users/feature-folder-detail": ["libs/users/materials/feature-folder-detail/src/index.ts"],
+      "@users/feature-folders-create": ["libs/users/materials/feature-folders-create/src/index.ts"],
       "@users/feature-folders-list": ["libs/users/materials/feature-folders-list/src/index.ts"],
       "@users/feature-users-create": ["libs/users/users/feature-users-create/src/index.ts"],
       "@users/feature-users-detail": ["libs/users/users/feature-users-detail/src/index.ts"],
